--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,20 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <title>Tworzenie notatki</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+          crossorigin="anonymous">
 </head>
 <body>
-<h1 th:text="|Tworzenie notatki|"></h1>
-<form action="#" th:action="@{/informations/}" method="post">
-    <label for="noteName" th:text="|Nazwa notatki:|"></label><br>
-    <input type="text" id="noteName" name="noteName"><br>
+<div class="container">
+    <h1 th:text="|Tworzenie notatki|"></h1>
+    <hr>
+    <form action="#" th:action="@{/informations/}" method="post">
+        <div class="form-group">
+            <label for="noteName" th:text="|Nazwa notatki:|"></label>
+            <input type="text" class="form-control" id="noteName" name="noteName" placeholder="Wpisz nazwę notatki">
+        </div>
+        <div class="form-group">
+            <label for="categoryName" th:text="|Kategoria notatki:|"></label>
+            <input type="text" class="form-control" id="categoryName" name="categoryName" placeholder="Wpisz nazwę kategorii">
+        </div>
+        <div class="form-group">
+            <label for="descriptionNote" th:text="|Opis notatki:|"></label>
+            <textarea class="form-control" id="descriptionNote" name="descriptionNote" rows="4" cols="50" placeholder="Wpisz opis notatki"></textarea>
+        </div>
+        <button type="submit" class="btn btn-primary" th:text="|Utwórz notatkę|"></button>
+    </form>
+</div>
 
-    <label for="categoryName" th:text="|Kategoria notatki:|"></label><br>
-    <input type="text" id="categoryName" name="categoryName"><br>
-
-    <label for="descriptionNote" th:text="|Opis notatki:|"></label><br>
-    <textarea id="descriptionNote" name="descriptionNote" rows="4" cols="50"></textarea><br><br>
-
-    <input type="submit" value="Utwórz notatkę" th:value="|Utwórz notatkę|">
-</form>
 </body>
 </html>
