--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,19 +14,18 @@
     <form action="#" th:action="@{/informations/}" method="post">
         <div class="form-group">
             <label for="noteName" th:text="|Nazwa notatki:|"></label>
-            <input type="text" class="form-control" id="noteName" name="noteName" placeholder="Wpisz nazwę notatki">
+            <input type="text" class="form-control" id="noteName" name="noteName" placeholder="Wpisz nazwę notatki" maxlength="20" minlength="3" required>
         </div>
         <div class="form-group">
-            <label for="categoryName" th:text="|Kategoria notatki:|"></label>
-            <input type="text" class="form-control" id="categoryName" name="categoryName" placeholder="Wpisz nazwę kategorii">
+            <label for="categoryName" th:text="|Kategoria notatki(małe znaki):|"></label>
+            <input type="text" class="form-control" id="categoryName" name="categoryName" placeholder="Wpisz nazwę kategorii" maxlength="20" minlength="3" pattern="[a-z]+" required>
         </div>
         <div class="form-group">
             <label for="descriptionNote" th:text="|Opis notatki:|"></label>
-            <textarea class="form-control" id="descriptionNote" name="descriptionNote" rows="4" cols="50" placeholder="Wpisz opis notatki"></textarea>
+            <textarea class="form-control" id="descriptionNote" name="descriptionNote" rows="4" cols="50" placeholder="Wpisz opis notatki" maxlength="500" minlength="5" required></textarea>
         </div>
         <button type="submit" class="btn btn-primary" th:text="|Utwórz notatkę|"></button>
     </form>
 </div>
-
 </body>
 </html>
