--- a/src/main/resources/templates/informations.html
+++ b/src/main/resources/templates/informations.html
@@ -11,7 +11,7 @@
 <div class="container">
     <h1 th:text="|Informations in the database|"></h1>
     <hr>
-    <form method="get" action="#" th:action="@{/informations/category}">
+    <form method="get" action="#" th:action="@{/informations/}">
         <div class="form-group">
             <label for="categorySelect">Filter by category:</label>
             <select id="categorySelect" name="categoryName" class="form-control">
@@ -19,7 +19,22 @@
                 <option th:each="category : ${categories}" th:value="${category.name}" th:text="${category.name}"></option>
             </select>
         </div>
-        <button type="submit" class="btn btn-primary">Filter</button>
+        <div class="form-group">
+            <label for="sortBySelect">Sort by:</label>
+            <select id="sortBySelect" name="sortBy" class="form-control">
+                <option value="name">Name</option>
+                <option value="creationTime">Creation Time</option>
+                <option value="category">Category</option>
+            </select>
+        </div>
+        <div class="form-group">
+            <label for="sortDirectionSelect">Sort direction:</label>
+            <select id="sortDirectionSelect" name="sortDirection" class="form-control">
+                <option value="ASC">Ascending</option>
+                <option value="DESC">Descending</option>
+            </select>
+        </div>
+        <button type="submit" class="btn btn-primary">Filter and Sort</button>
     </form>
     <hr>
     <ol class="list-group">
@@ -36,8 +51,6 @@
         </li>
     </ol>
 </div>
-
-
 
 </body>
 </html>
