sortowanie kategorii (od najbardziej popularnej)

--- a/src/main/resources/templates/informations.html
+++ b/src/main/resources/templates/informations.html
@@ -25,6 +25,7 @@
                 <option value="name">Name</option>
                 <option value="creationTime">Creation Time</option>
                 <option value="category">Category</option>
+                <option value="categoryOccurrences">Category Occurrences</option>
             </select>
         </div>
         <div class="form-group">
