walidacja zmiany notatki

--- a/src/main/resources/templates/informations.html
+++ b/src/main/resources/templates/informations.html
@@ -52,7 +52,7 @@
                 <br>
                 <span th:text="|Category: ${information.category} |"></span>
                 <br>
-                <span th:text="|Description: ${information.getDescription} |"></span>
+                <span th:text="|Description: ${information.description} |"></span>
                 <br>
                 <a th:href="@{/informations/edit/{id}(id=${information.id})}" class="btn btn-primary">Edit</a>
             </p>
