--- a/src/main/resources/templates/information.html
+++ b/src/main/resources/templates/information.html
@@ -17,16 +17,18 @@
         <div class="form-group">
             <label for="nameInput">Name:</label>
             <input type="text" id="nameInput" name="name" class="form-control" th:field="*{name}">
+            <div th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="text-danger"></div>
         </div>
         <div class="form-group">
             <label for="categoryInput">Category:</label>
             <input type="text" id="categoryInput" name="category" class="form-control" th:value="${information.category}">
+            <div th:if="${#fields.hasErrors('category')}" th:errors="*{category}" class="text-danger"></div>
         </div>
         <div class="form-group">
             <label for="descriptionInput">Description:</label>
             <textarea id="descriptionInput" name="description" class="form-control" th:text="${information.description}"></textarea>
+            <div th:if="${#fields.hasErrors('description')}" th:errors="*{description}" class="text-danger"></div>
         </div>
-
 
         <button type="submit" class="btn btn-primary">Save</button>
     </form>
