chyba na poniedziłek wszystko działa

--- a/src/main/resources/templates/informations.html
+++ b/src/main/resources/templates/informations.html
@@ -59,6 +59,10 @@
             </p>
         </li>
     </ol>
+
+
+    <a th:href="@{add-information}" class="btn btn-success">Add Information</a>
+    <a th:href="@{add-category}" class="btn btn-success">Add Category</a>
 </div>
 </body>
 </html>
