--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,22 +9,11 @@
 </head>
 <body>
 <div class="container">
-    <h1 th:text="|Tworzenie notatki|"></h1>
     <hr>
-    <form action="#" th:action="@{/informations/}" method="post">
-        <div class="form-group">
-            <label for="noteName" th:text="|Nazwa notatki:|"></label>
-            <input type="text" class="form-control" id="noteName" name="noteName" placeholder="Wpisz nazwę notatki" maxlength="20" minlength="3" required>
-        </div>
-        <div class="form-group">
-            <label for="categoryName" th:text="|Kategoria notatki(małe znaki):|"></label>
-            <input type="text" class="form-control" id="categoryName" name="categoryName" placeholder="Wpisz nazwę kategorii" maxlength="20" minlength="3" pattern="[a-z]+" required>
-        </div>
-        <div class="form-group">
-            <label for="descriptionNote" th:text="|Opis notatki:|"></label>
-            <textarea class="form-control" id="descriptionNote" name="descriptionNote" rows="4" cols="50" placeholder="Wpisz opis notatki" maxlength="500" minlength="5" required></textarea>
-        </div>
-        <button type="submit" class="btn btn-primary" th:text="|Utwórz notatkę|"></button>
+    <form action="#" th:action="@{/log-in/}" method="post">
+        <center>
+            <button type="submit" class="btn btn-primary" th:text="|Log in|"></button>
+        </center>
     </form>
 </div>
 </body>
