--- a/src/main/resources/templates/informations.html
+++ b/src/main/resources/templates/informations.html
@@ -54,7 +54,7 @@
             <p class="card-text">
                 <span th:text="|Date: ${information.creationTime} |"></span>
                 <br>
-                <span th:text="|Category: ${information.category} |"></span>
+                <span th:text="|Category: ${information.category.name} |"></span>
                 <br>
                 <span th:text="|Description: ${information.description} |"></span>
                 <br>
