--- a/src/main/resources/templates/add-information.html
+++ b/src/main/resources/templates/add-information.html
@@ -11,6 +11,7 @@
 <div class="container">
     <h1>Add Information</h1>
     <hr>
+    <h2>Information Details</h2>
     <form method="post" th:action="@{/informations/add-information}" th:object="${information}">
         <div class="form-group">
             <label for="nameInput">Name:</label>
@@ -27,8 +28,19 @@
             <textarea id="descriptionInput" name="description" class="form-control" th:text="${information.description}"></textarea>
             <div th:if="${#fields.hasErrors('description')}" th:errors="*{description}" class="alert alert-danger"></div>
         </div>
-        <button type="submit" class="btn btn-primary">Save</button>
+        <div class="form-group">
+            <label for="nameInput">Link(Optional):</label>
+            <input type="text" id="link" name="link" class="form-control" th:field="*{link}">
+        </div>
+        <button type="submit" class="btn btn-primary" style="color: #ffffff; background-color: #0a0aff;">
+            Save
+        </button>
     </form>
 </div>
+<footer>
+    <div class="container">
+        <p>© 2023 StoreEverything. Wszelkie prawa zastrzeżone.</p>
+    </div>
+</footer>
 </body>
 </html>
