--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Tworzenie notatki</title>
+    <title></title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
           crossorigin="anonymous">
@@ -11,10 +11,17 @@
 <div class="container">
     <hr>
     <form action="#" th:action="@{/log-in/}" method="post">
-        <center>
-            <button type="submit" class="btn btn-primary" th:text="|Log in|"></button>
-        </center>
+        <div class="text-center">
+            <button type="submit" class="btn btn-primary" style="color: #ffffff; background-color: #0a0aff;">
+                Log in
+            </button>
+        </div>
     </form>
 </div>
+<footer>
+    <div class="container">
+        <p>© 2023 StoreEverything. Wszelkie prawa zastrzeżone.</p>
+    </div>
+</footer>
 </body>
 </html>
