--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,25 +2,23 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>Welcome</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
           crossorigin="anonymous">
 </head>
 <body>
 <div class="container">
+    <h1>Welcome to StoreEverything</h1>
     <hr>
-    <form action="#" th:action="@{/log-in/}" method="post">
-        <div class="text-center">
-            <button type="submit" class="btn btn-primary" style="color: #ffffff; background-color: #0a0aff;">
-                Log in
-            </button>
-        </div>
-    </form>
+    <div class="text-center">
+        <a href="user/login" class="btn btn-primary" style="color: #ffffff; background-color: #0a0aff;">Login</a>
+        <a href="user/register" class="btn btn-primary" style="color: #ffffff; background-color: #0a0aff;">Register</a>
+    </div>
 </div>
 <footer>
     <div class="container">
-        <p>© 2023 StoreEverything. Wszelkie prawa zastrzeżone.</p>
+        <p>© 2023 StoreEverything. All rights reserved.</p>
     </div>
 </footer>
 </body>
