--- a/src/main/resources/templates/edit-information.html
+++ b/src/main/resources/templates/edit-information.html
@@ -1,14 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+
 <head>
     <meta charset="UTF-8">
     <title>Edit Information</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
           crossorigin="anonymous">
+
+    <style>
+        .nav-link {
+            color: #0a0aff;
+        }
+    </style>
 </head>
 <body>
 <div class="container">
+    <ul class="nav">
+        <li class="nav-item">
+            <a sec:authorize-url="/informations/" class="nav-link" th:href="@{/informations/}">Home</a>
+        </li>
+        <li class="nav-item">
+            <a sec:authorize-url="/informations/add-category" class="nav-link" th:href="@{/informations/add-category}">Add Category</a>
+        </li>
+        <li class="nav-item">
+            <a sec:authorize-url="/informations/add-information" class="nav-link" th:href="@{/informations/add-information}">Add Information</a>
+        </li>
+        <li class="nav-item">
+            <a sec:authorize-url="/user/logout" class="nav-link" th:href="@{/user/logout}">Logout</a>
+        </li>
+    </ul>
+    <ul class="nav">
+        <li class="nav-item">
+            <a class="nav-link" th:href="@{/informations/}">Home</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" th:href="@{/informations/add-category}">Add Category</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" th:href="@{/informations/add-information}">Add Information</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" th:href="@{/user/logout}">Logout</a>
+        </li>
+    </ul>
     <h1>Edit Information</h1>
     <hr>
     <h2>Information Details</h2>
