--- a/src/main/resources/templates/informations.html
+++ b/src/main/resources/templates/informations.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <title>Informations</title>
@@ -11,9 +11,28 @@
             word-wrap: break-word;
         }
     </style>
+    <style>
+        .nav-link {
+            color: #0a0aff;
+        }
+    </style>
 </head>
 <body>
 <div class="container">
+    <ul class="nav">
+        <li class="nav-item">
+            <a sec:authorize-url="/informations/" class="nav-link" th:href="@{/informations/}">Home</a>
+        </li>
+        <li class="nav-item">
+            <a sec:authorize-url="/informations/add-category" class="nav-link" th:href="@{/informations/add-category}">Add Category</a>
+        </li>
+        <li class="nav-item">
+            <a sec:authorize-url="/informations/add-information" class="nav-link" th:href="@{/informations/add-information}">Add Information</a>
+        </li>
+        <li class="nav-item">
+            <a sec:authorize-url="/user/logout" class="nav-link" th:href="@{/user/logout}">Logout</a>
+        </li>
+    </ul>
     <h1 th:text="|Informations in the database|"></h1>
     <hr>
     <form method="get" action="#" th:action="@{/informations/}">
@@ -55,10 +74,10 @@
             </div>
         </div>
 
-        <button type="submit" class="btn btn-primary" style="color: #ffffff; background-color: #0a0aff;">
+        <button th:action="@{/informations/shared}" type="submit" class="btn btn-primary" style="color: #ffffff; background-color: #0a0aff;">
             Filter and Sort
         </button>
-        <button type="submit" name="resetFilters" value="true" class="btn btn-danger">
+        <button th:action="@{/informations/shared}" type="submit" name="resetFilters" value="true" class="btn btn-danger">
             Reset Filters
         </button>
     </form>
@@ -75,26 +94,36 @@
                 <br>
                 <span th:if="${information.link != null}">
                     Link:
-                <a th:href="${information.link}" target="_blank" th:text="${information.link}"></a>
-                <br>
+                    <a th:href="${information.link}" target="_blank" th:text="${information.link}"></a>
+                    <br>
                 </span>
-                <a th:href="@{edit/{id}(id=${information.id})}" class="btn btn-primary" style="color: #ffffff; background-color: #0a0aff;">
-                    Edit
-                </a>
-                <a th:href="@{delete/{id}(id=${information.id})}" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this information?')">
-                    Delete
-                </a>
+                    <a sec:authorize-url="/informations/edit/" th:href="@{edit/{id}(id=${information.id})}" class="btn btn-primary" style="color: #ffffff; background-color: #0a0aff;">
+                        Edit
+                    </a>
+                    <a sec:authorize-url="/informations/delete/" th:href="@{delete/{id}(id=${information.id})}" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this information?')">
+                        Delete
+                    </a>
+                    <a sec:authorize-url="/informations/share/" th:href="@{share/{id}(id=${information.id})}" class="btn btn-success" style="color: #ffffff; background-color: #146126; margin-left: 10px;">
+                        Share
+                    </a>
             </p>
         </li>
     </ol>
 
+        <a sec:authorize-url="/informations/add-information" th:href="@{add-information}" class="btn btn-success" style="color: #ffffff; background-color: #146126;">
+            Add Information
+        </a>
+        <a sec:authorize-url="/informations/add-category" th:href="@{add-category}" class="btn btn-success" style="color: #ffffff; background-color: #146126;">
+            Add Category
+        </a>
 
-    <a th:href="@{add-information}" class="btn btn-success" style="color: #ffffff; background-color: #146126;">
-        Add Information
-    </a>
-    <a th:href="@{add-category}" class="btn btn-success" style="color: #ffffff; background-color: #146126;">
-        Add Category
-    </a>
+
+    <div class="container">
+        <div class="text-right">
+            <a sec:authorize-url="/informations/shared" th:href="@{/informations/shared}"
+               class="btn btn-success" style="color: #ffffff; background-color: #146126; margin-left: 10px;">Go To Shared</a>
+        </div>
+    </div>
 </div>
 <footer>
     <div class="container">
